--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,6 @@ input{
     text-align: center;
     font-size: var(--h1-font-size);
     margin-bottom: var(--mb-3);
-    transform: translateX(-3%);
 }
 
 .section__title::before{
@@ -380,9 +379,11 @@ input{
     column-gap: 3rem;
     justify-content: center;
 }
+
 .Education{
-    margin-left: 50px;
+    margin-left: 100px;
 }
+
 .qualification__title{
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
@@ -514,3 +515,65 @@ input{
     font-size: var(--small-font-size);
     font-weight: normal;
 }
+
+.work__container{
+    grid-template-columns: repeat(3,330px);
+    gap: 1.8rem;
+    justify-content: center;
+    padding-top: 1rem;
+}
+
+.work__filters{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: .75rem;
+    margin-bottom: 2rem;
+}
+
+.work__item{
+    cursor: pointer;
+    color: var(--title-color);
+    padding: .25rem .75rem;
+    font-weight: var(--font-medium);
+    border-radius: .5rem;
+}
+
+.work__card{
+    background-color: var(--box-color);
+    padding: 1.25rem;
+    border-radius: .5rem;
+}
+
+.work__img{
+    max-width: 100% !important;
+    border-radius: .5rem;
+    margin-bottom: var(--mb-1);
+}
+
+.work__title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-5);
+}
+
+.work__button{
+    color: var(--skin-color);
+    font-size: var(--small-font-size);
+    display:flex;
+    align-items: center;
+    column-gap: .25rem;
+    cursor: pointer;
+}
+
+.work__button-icon{
+    font-size: 1rem;
+    transition: .3s;
+}
+
+
+.active-work{
+    background-color: var(--skin-color);
+    color: var(--title-color);
+}
+
